5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1756_1576.log
== TEST (2019-05-21 20:50:31) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" , dtype = int)))
v2 = array(eval(input("vetor barsanulfo =" , dtype = int)))

i = 0 #posicao dos vetores
cont1 = 0 #vitorias de eusapia
cont2 = 0 #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:52:30) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0 #posicao dos vetores
cont1 = 0 #vitorias de eusapia
cont2 = 0 #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    i = 0 #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:52:31) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0 #posicao dos vetores
cont1 = 0 #vitorias de eusapia
cont2 = 0 #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    i = 0 #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:52:51) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    i = 0          #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:53:06) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- EXECUTION TIME:
0.209679
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 6
    i = 0          #posicao dos vetores
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:53:07) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    i = 0          #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:53:14) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i =0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    i =0          #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:53:26) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

cont = 0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	i = i + 1
	cont1 = cont1 + 1
	cont2 = cont2 + 1
	if (cont1 > cont2):
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
-- ERROR:
File "XXXX", line 6
    cont = 0          #posicao dos vetores
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:57:25) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0          #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 6
    i = 0          #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:57:42) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

       #posicao dos vetores
cont1 = 0      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 7
    cont1 = 0      #vitorias de eusapia
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:57:59) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

       #posicao dos vetores
      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- EXECUTION TIME:
0.123875
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 8
    cont2 = 0      #vitoria de barsanulfo
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:58:02) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

       #posicao dos vetores
      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 8
    cont2 = 0      #vitoria de barsanulfo
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:58:04) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

       #posicao dos vetores
      #vitorias de eusapia
cont2 = 0      #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 8
    cont2 = 0      #vitoria de barsanulfo
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:58:50) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0       #posicao dos vetores
ve = 0  #vitorias de eusapia
vb = 0     #vitoria de barsanulfo

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 6
    p = 0       #posicao dos vetores
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 20:59:11) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 6
    p = 0      
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 20:59:13) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(i < v1 and i < v2 and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
	
	if (cont1 > cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (cont1 < cont2):
		i = i + 1
		cont1 = cont1 + 1
		cont2 = cont2 + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- EXECUTION TIME:
0.147585
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 6
    p = 0      
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 21:01:53) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(p < v1 and p < v2 ):
	
	if (ve > vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (ve < vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- EXECUTION TIME:
0.141892
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 6
    p = 0      
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 21:01:55) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(p < v1 and p < v2 ):
	
	if (ve > vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (ve < vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- EXECUTION TIME:
0.159572
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 6
    p = 0      
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 21:01:56) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(p < v1 and p < v2 ):
	
	if (ve > vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (ve < vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- ERROR:
File "XXXX", line 6
    p = 0      
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 21:01:57) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

p = 0      
ve = 0 
vb = 0     

while(p < v1 and p < v2 ):
	
	if (ve > vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("EUSAPIA")
	elif (ve < vb and size(v1) == size(v2) and 11 == "Pedra"
	  and 22 == "Papel" and 33 == "Tesoura"):
		p = p + 1
		ve = ve + 1
		vb = vb + 1
		print(size(v1) + size(v2))
		print("BARSANULFO")
	else:
		print(size(v1) + size(v2))
		print("EMPATE")
-- EXECUTION TIME:
0.15972
-- ERROR:
  File "/home/codebench/codes/1756/1576/main.py", line 6
    p = 0      
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:13:43) 
-- CODE:
from numpy import*

v1 = array(eval(int(input("vetor eusapia =" ))))
v2 = array(eval(int(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 6
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:39) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:52) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:53) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:14:53) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:12) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:15:59) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:16:30) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:17:08) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:17:20) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:17:43) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 13:18:23) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
	i=i+1
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:18:40) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
	i=i+1
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
1.78836
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:18:59) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
159.649
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:18:59) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
105.005
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 13:19:13) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
234.369
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 11:49:24) 
-- CODE:
from numpy import*

v1 = array(eval(input("vetor eusapia =" )))
v2 = array(eval(input("vetor barsanulfo =" )))

i = 0
e = 0
b = 0

while (i < size(v1)):
	if(v1[i] == 22 and v2[i] == 11 or v1[i] == 11 and v2[i] == 33
	  or v1[i] == 33 and v2[i] == 22):
		e = e + 1
	elif(v2[i] == 22 and v1[i] == 11 or v2[i] == 11 and v1[i] == 33
	  or v2[i] == 33 and v1[i] == 22):
		b = b + 1
	else:
		b = b + 0
		e = e + 0
	i=i+1
print(i)	  
if(b > e):
	print("BARSANULFO")
elif(e > b):
	print("EUSAPIA")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.411124
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
